Overflow of board wrapper fixed.

--- a/src/components/Board.scss
+++ b/src/components/Board.scss
@@ -1,5 +1,6 @@
 #board-wrapper {
     display: flex;
+    width: 100%;
     height: 100%;
     overflow: auto;
 
@@ -7,5 +8,6 @@
         width: 1750px;
         height: 785px;
         flex-shrink: 0;
+        margin: auto;
     }
 }
