--- a/src/components/Game.scss
+++ b/src/components/Game.scss
@@ -1,8 +1,5 @@
 @import 'styles';
 
-$height-top: 0px;
-$height-bottom: 150px;
-
 #game {
     position: relative;
     width: 100%;
